# burn

./: Cargo.toml
crates/burn-cli/: Cargo.toml
crates/burn-cli/src/: main.rs  utils.rs
crates/burn-cli/templates/: data.rs.jinja  inference.rs.jinja  lib.rs.jinja  main.rs.jinja  model.rs.jinja  training.rs.jinja
