[package]
name = "burn-cli"
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
burn = { path = "../burn", version = "0.19.0" }
clap = { workspace = true }
minijinja = { workspace = true }
minijinja-embed = { workspace = true }

[build-dependencies]
minijinja-embed = { workspace = true }
